--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,9 +16,9 @@
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
+                    <a href="{% url 'product_detail' product.id %}">
+                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </a>
                     {% else %}
                     <a href="{% url 'product_detail' product.id %}">
                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
@@ -26,24 +26,25 @@
                     {% endif %}
                 </div>
             </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mt-5">
+                <div class="product_details_container mb-5 ">
+                    <p class="mb-0">{{ product.name }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold">{{ product.price }} EU</p>
+                    <p class="small mt-1">
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        </a>
+                    </p>
+                    {% if product.rating %}
+                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    {% else %}
+                    <small class="text-muted">No Rating</small>
+                    {% endif %}
+                    <p class="mt-3">{{ product.description }}</p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="col-12 col-md-6 col-lg-4">
-    <div class="product_details_container mb-5 mt-mb-5">
-        <p class="mb-0">{{ product.name }}</p>
-        <p class="lead mb-0 text-left font-weight-bold">{{ product.price }}</p>
-        <p class="small mt-1">
-            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-            </a>
-        </p>
-        {% if product.rating %}
-            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-        {% else %}
-            <small class="text-muted">No Rating</small>
-        {% endif %}
-        <p class="mt-3">{{ product.description }}</p>
     </div>
 </div>
 {% endblock %}
