--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,7 +30,8 @@
             <div class="col-12 col-md-6 col-lg-4 mt-5">
                 <div class="product_details_container mb-5 ">
                     <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">{{ product.price }} EU</p>
+                    <p class="lead mb-0 text-left font-weight-bold">
+                        €{{ product.price }}</p>
                     <p class="small mt-1">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                             <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
